; ModuleID = '/home/carl/AnghaBench/netdata/web/api/queries/stddev/extr_stddev.c_variance.c'
source_filename = "/home/carl/AnghaBench/netdata/web/api/queries/stddev/extr_stddev.c_variance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grouping_stddev = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grouping_stddev*)* @variance to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @variance(%struct.grouping_stddev* %0) #0 {
  %2 = alloca %struct.grouping_stddev*, align 8
  store %struct.grouping_stddev* %0, %struct.grouping_stddev** %2, align 8
  %3 = load %struct.grouping_stddev*, %struct.grouping_stddev** %2, align 8
  %4 = getelementptr inbounds %struct.grouping_stddev, %struct.grouping_stddev* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp sgt i32 %5, 1
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load %struct.grouping_stddev*, %struct.grouping_stddev** %2, align 8
  %9 = getelementptr inbounds %struct.grouping_stddev, %struct.grouping_stddev* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.grouping_stddev*, %struct.grouping_stddev** %2, align 8
  %12 = getelementptr inbounds %struct.grouping_stddev, %struct.grouping_stddev* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = sub nsw i32 %13, 1
  %15 = sdiv i32 %10, %14
  %16 = sitofp i32 %15 to double
  br label %18

17:                                               ; preds = %1
  br label %18

18:                                               ; preds = %17, %7
  %19 = phi double [ %16, %7 ], [ 0.000000e+00, %17 ]
  %20 = fptosi double %19 to i32
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
